--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <!-- TERMINAL OVERLAY BORDER -->
         <div class="container">
           <div class="terminal-overlay">
-            </p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects
+            <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects
             coming soon!</p>
           </div><!-- End Section Title -->
           <!-- TERMINAL OVERLAY BORDER -->
