--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section><!-- /About Section -->
 
 <!-- Services Section -->
-<section id="services" class="services section-img-bg">
+<section id="services" class="services section-black">
 
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
@@ -263,7 +263,7 @@
 <!-- /Resume Section [Lonely Bootstrap] -->
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio section">
+    <section id="portfolio" class="portfolio section-black">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -488,7 +488,7 @@
 <!-- End Blog Section - Accordion Style -->
 
  <!-- Testimonials Section -->
-<section id="testimonials" class="testimonials section-img-bg">
+<section id="testimonials" class="testimonials section-black">
   
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
