--- a/index.html
+++ b/index.html
@@ -149,17 +149,19 @@
           </div>
         </div><!-- End Service Item -->
 
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-          <div class="icon flex-shrink-0"><i class="bi bi-person-arms-up"></i></div>
-          <div>
-            <h4 class="title">Mentorship & Advisory</h4>
-            <p class="description">
-              *Coach on careers in technical integrations and systems engineering.<br>
-              *Review resumes, pitches, and technical skills.<br>
-              *Guide colleagues and clients on APIs, feeds, and other data processes.
-            </p>
-          </div>
-        </div><!-- End Service Item -->
+        <div class="row justify-content-center">
+  <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+    <div class="icon flex-shrink-0"><i class="bi bi-person-arms-up"></i></div>
+    <div>
+      <h4 class="title">Mentorship & Advisory</h4>
+      <p class="description">
+        *Coach on careers in technical integrations and systems engineering.<br>
+        *Review resumes, pitches, and technical skills.<br>
+        *Guide colleagues and clients on APIs, feeds, and other data processes.
+      </p>
+    </div>
+  </div>
+</div><!-- End Service Item -->
   </div><!-- End container -->
 </section><!-- /Services Section -->
 
