--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
   </main>
 
-  <footer id="footer" class="footer light-background">
+  <footer id="footer" class="footer">
     <div class="container">
       <h3 class="sitename">Sasha Cheek | Portfolio</h3>
       <p>Bridging the gap between systems and narrative.</p>
