--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Tech Portfolio</h2>
-        <pApplying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
+        <p>Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -368,11 +368,14 @@
 
 <!--Blog Section - Accordion Style-->
 <section id="blog-accordion" class="section-black py-5">
-  <div class="container">
-    <div class="section-header text-center mb-4">
-      <h2>Writing</h2>
-      <p class="text-muted mb-0">Latest posts, summaries and quick links — expand to read more.</p>
-    </div><!-- End Section Title -->
+
+    <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Writing</h2>
+        <p>Latest posts, summaries and quick links — expand to read more.</p>
+      </div><!-- End Section Title -->
+
+<div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="accordion" id="accordionBlog">
       <!-- Post 1 -->
       <div class="accordion-item">
