--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     </section><!-- /Portfolio Section -->
 
 <!--Blog Section - Accordion Style-->
-<section id="blog-accordion" class="section-black py-5">
+<section id="blog-accordion" class="blog section-black">
 
     <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -377,8 +377,9 @@
         <p>Latest posts, summaries and quick links — expand to read more.</p>
       </div><!-- End Section Title -->
 
-<div class="container" data-aos="fade-up" data-aos-delay="100">
-    <div class="accordion" id="accordionBlog">
+<div class="container">
+
+    <div class="accordion" id="accordionBlog"data-aos="fade-up" data-aos-delay="100">
       <!-- Post 1 -->
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
