--- a/index.html
+++ b/index.html
@@ -368,133 +368,63 @@
 
     </section><!-- /Portfolio Section -->
 
-<!--Blog Section - Accordion Style-->
-<section id="blog-accordion" class="blog section-black">
+<!-- Blog Section - Cyberpunk Accordion -->
+<section id="blog-accordion" class="section-black">
 
-    <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Writing</h2>
-        <p>Latest posts, summaries and quick links — expand to read more.</p>
-      </div><!-- End Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Writing</h2>
+    <p>Latest posts, summaries and quick links — expand to read more.</p>
+  </div>
 
-<div class="container">
+  <div class="container cyberpunk-accordion" data-aos="fade-up" data-aos-delay="100">
 
-    <div class="accordion" id="accordionBlog"data-aos="fade-up" data-aos-delay="100">
-      <!-- Post 1 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button collapsed d-flex align-items-center" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
-                  aria-controls="collapseOne">
-            <div class="me-3 blog-meta text-muted small">
-              <div>Sep 10, 2025</div>
-              <div class="mt-1">Design · 3 min read</div>
-            </div>
-            <div class="flex-grow-1 text-start">
-              <strong class="d-block">Designing for Clarity: Minimal UI Patterns</strong>
-              <span class="text-muted d-block small">How to reduce cognitive load while improving usability.</span>
-            </div>
-            <!-- caret will be rotated by JS when expanded -->
-            <span class="accordion-caret ms-3"></span>
-          </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-             data-bs-parent="#accordionBlog">
-          <div class="accordion-body">
-            <div class="row g-3 align-items-start">
-              <div class="col-lg-4">
-                <img src="assets/img/blog/design-clarity.jpg" alt="Design clarity" class="img-fluid rounded">
-              </div>
-              <div class="col-lg-8">
-                <p class="mb-2">Simplicity is a process. In this post we walk through techniques to simplify interactions,
-                   prioritize content, and design helpful affordances that guide users without overwhelming them.</p>
-                <a href="/blog/designing-for-clarity.html" class="btn btn-sm btn-primary">Read full article</a>
-                <div class="mt-3 small text-muted">Tags: <span class="badge bg-light text-dark">Design</span>
-                  <span class="badge bg-light text-dark">UX</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <!-- Article 1 -->
+    <div class="cp-accordion-item">
+      <button class="cp-accordion-toggle">
+        David Bowie’s Ode to Sci-Fi and Space Science 
+        <span class="meta">Medium · Feature</span>
+      </button>
+      <div class="cp-accordion-content">
+        <p>A deep dive into Bowie’s cosmic influence on science and storytelling.</p>
+        <button class="cp-btn open-article" data-article="bowie">Read full article</button>
       </div>
+    </div>
 
-      <!-- Post 2 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-          <button class="accordion-button collapsed d-flex align-items-center" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-                  aria-controls="collapseTwo">
-            <div class="me-3 blog-meta text-muted small">
-              <div>Aug 25, 2025</div>
-              <div class="mt-1">Development · 6 min read</div>
-            </div>
-            <div class="flex-grow-1 text-start">
-              <strong class="d-block">Small JS Patterns for Faster Pages</strong>
-              <span class="text-muted d-block small">Practical patterns to reduce bundle size and improve performance.</span>
-            </div>
-            <span class="accordion-caret ms-3"></span>
-          </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-             data-bs-parent="#accordionBlog">
-          <div class="accordion-body">
-            <div class="row g-3 align-items-start">
-              <div class="col-lg-4">
-                <img src="assets/img/blog/js-patterns.jpg" alt="JS patterns" class="img-fluid rounded">
-              </div>
-              <div class="col-lg-8">
-                <p class="mb-2">This article covers a handful of focused strategies — such as defer/lazy loading, micro-modules,
-                   and event delegation — to keep your pages snappy without a big framework.</p>
-                <a href="/blog/js-patterns.html" class="btn btn-sm btn-primary">Read full article</a>
-                <div class="mt-3 small text-muted">Tags: <span class="badge bg-light text-dark">JavaScript</span>
-                  <span class="badge bg-light text-dark">Performance</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <!-- Article 2 -->
+    <div class="cp-accordion-item">
+      <button class="cp-accordion-toggle">
+        Automated Love: How AI Became the New Face of Romance 
+        <span class="meta">Medium · Feature</span>
+      </button>
+      <div class="cp-accordion-content">
+        <p>Exploring AI, intimacy, and the reshaping of human connection.</p>
+        <button class="cp-btn open-article" data-article="love">Read full article</button>
       </div>
+    </div>
 
-      <!-- Post 3 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-          <button class="accordion-button collapsed d-flex align-items-center" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-                  aria-controls="collapseThree">
-            <div class="me-3 blog-meta text-muted small">
-              <div>Jul 15, 2025</div>
-              <div class="mt-1">Career · 4 min read</div>
-            </div>
-            <div class="flex-grow-1 text-start">
-              <strong class="d-block">Freelancing Tips: Finding Better Clients</strong>
-              <span class="text-muted d-block small">Practical tactics to raise your rates and attract the right projects.</span>
-            </div>
-            <span class="accordion-caret ms-3"></span>
-          </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-             data-bs-parent="#accordionBlog">
-          <div class="accordion-body">
-            <div class="row g-3 align-items-start">
-              <div class="col-lg-4">
-                <img src="assets/img/blog/freelance-clients.jpg" alt="Freelance clients" class="img-fluid rounded">
-              </div>
-              <div class="col-lg-8">
-                <p class="mb-2">Learn how to qualify leads, package your work, and negotiate terms that make projects profitable and enjoyable.</p>
-                <a href="/blog/freelancing-tips.html" class="btn btn-sm btn-primary">Read full article</a>
-                <div class="mt-3 small text-muted">Tags: <span class="badge bg-light text-dark">Freelance</span>
-                  <span class="badge bg-light text-dark">Business</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <!-- Article 3 -->
+    <div class="cp-accordion-item">
+      <button class="cp-accordion-toggle">
+        Dealing with Early Signs of Alzheimer’s Disease in Loved Ones 
+        <span class="meta">Medium · Feature</span>
+      </button>
+      <div class="cp-accordion-content">
+        <p>A personal and practical look at recognizing and managing Alzheimer’s early symptoms.</p>
+        <button class="cp-btn open-article" data-article="alzheimers">Read full article</button>
       </div>
+    </div>
 
-    </div> <!-- /.accordion -->
-  </div> <!-- /.container -->
+  </div>
 </section>
-<!-- End Blog Section - Accordion Style -->
+
+<!-- Cyberpunk Article Modal -->
+<div id="article-modal" class="cp-modal">
+  <div class="cp-modal-content">
+    <span class="cp-close">&times;</span>
+    <div id="article-body"></div>
+  </div>
+</div>
+<!-- End Blog Section -->
 
  <!-- Testimonials Section -->
 <section id="testimonials" class="testimonials section-black">
