--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
     </section><!-- /Hero Section -->
 <!--About Section-->
-    <section id="about" class="about section-black">
+    <section id="about" class="section-black">
+  <div class="neon-frame">
       <div class="container content-wrap" data-aos="fade-up">
         <div class="section-title">
           <h2>About</h2>
@@ -114,6 +115,9 @@
             <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to demystify engineering and science through storytelling.</h3>
             <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and program management roles at Microsoft and Indeed. In addition to working full-time in technology, Sasha is an M.A. candidate in Science Writing at Johns Hopkins University.</p>
             <p>When Sasha is not debugging code and creating articles, she's dissecting the science behind her favorite films and TV shows.</p>
+</div>
+  <span class="corner corner-bottom-left"></span>
+  <span class="corner corner-bottom-left-vert"></span>
           </div>
         </div>
       </div>
