--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section><!-- /Hero Section -->
 <!--About Section-->
     <section id="about" class="section-black">
-  <div class="neon-frame">
+  <div class="section-title">
       <div class="container content-wrap" data-aos="fade-up">
         <div class="section-title">
           <h2>About</h2>
@@ -113,6 +113,7 @@
           </div>
           <div class="col-lg-7 content">
             <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to demystify engineering and science through storytelling.</h3>
+         <div class="neon-paragraph">
             <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and program management roles at Microsoft and Indeed. In addition to working full-time in technology, Sasha is an M.A. candidate in Science Writing at Johns Hopkins University.</p>
             <p>When Sasha is not debugging code and creating articles, she's dissecting the science behind her favorite films and TV shows.</p>
 </div>
