--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
+            <div class="neon-paragraph">
               <h3 class="my-3 blue-gray poppins">Summary</h3>
               <div class="resume-item ps-4 position-relative">
                 <h4 class="mb-2 playfair fs-5">Alice Barkley</h4>
@@ -198,6 +199,9 @@
                   <li class="pb-2 dark-text">+(123) 456-7891</li>
                   <li class="pb-2 dark-text">alice.barkley@example.com </li>
                 </ul>
+<span class="corner-bottom-left"></span>
+    <span class="corner-bottom-left-vert"></span>
+  </div>
               </div>
               <h3 class="my-3 blue-gray poppins">Education</h3>
               <div class="resume-item ps-4 pb-4 position-relative">
