--- a/index.html
+++ b/index.html
@@ -172,106 +172,84 @@
   </div><!-- End container -->
 </section><!-- /Services Section -->
 
-    <!-- Resume Section [Lonely Bootstrap Addition] -->
-     <section id="resume" class="resume section-black">
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
-        <p>Experience and technical expertise at a glance.</p>
-      </div><!-- End Section Title -->
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-<div class="neon-paragraph">
-              <h3 class="my-3 blue-gray poppins">Summary</h3>
-              <div class="resume-item ps-4 position-relative">
-                <h4 class="mb-2 playfair fs-5">Alice Barkley</h4>
-                <p class="mb-3 dark-text">
-                  <em>
-                    Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing
-                    user-centered digital/print marketing material from initial concept to final, polished deliverable.
-                  </em>
-                </p>
-                <ul class="ps-3 mb-3">
-                  <li class="pb-2 dark-text">Portland par 127,Orlando, FL</li>
-                  <li class="pb-2 dark-text">+(123) 456-7891</li>
-                  <li class="pb-2 dark-text">alice.barkley@example.com </li>
-                </ul>
-              </div>
-              <h3 class="my-3 blue-gray poppins">Education</h3>
-              <div class="resume-item ps-4 pb-4 position-relative">
-                <h4 class="mb-2 playfair fs-5">Master of Fine Arts & Graphic Design</h4>
-                <h5 class="py-1 px-2 mb-2 dark-text poppins">2015 - 2016</h5>
-                <p class="mb-3 dark-text"><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p class="dark-text">
-                  Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit.
-                  Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend
-                </p>
-              </div>
-              <div class="resume-item ps-4 position-relative">
-                <h4 class="mb-2 playfair fs-5">Bachelor of Fine Arts & Graphic Design</h4>
-                <h5 class="py-1 px-2 mb-2 dark-text poppins">2010 - 2014</h5>
-                <p class="mb-3 dark-text"><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p class="dark-text">
-                  Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                  unde vitae rerum
-                  voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <h3 class="my-3 blue-gray poppins">Professional Experience</h3>
-              <div class="resume-item ps-4 pb-4 position-relative">
-                <h4 class="mb-2 playfair fs-5">Senior graphic design specialist</h4>
-                <h5 class="py-1 px-2 mb-2 dark-text poppins">2019 - Present</h5>
-                <p class="mb-3 dark-text"><em>Experion, New York, NY</em></p>
-                <ul class="ps-3 mb-3">
-                  <li class="pb-2 dark-text">
-                    Lead in the design, development, and implementation of the graphic,
-                    layout, and production communication materials
-                  </li>
-                  <li class="pb-2 dark-text">
-                    Delegate tasks to the 7 members of the design team
-                    and provide counsel on all aspects of the project.
-                  </li>
-                  <li class="pb-2 dark-text">
-                    Supervise the assessment of all graphic materials
-                    in order to ensure quality and accuracy of the design
-                  </li>
-                  <li class="pb-2 dark-text">
-                    Oversee the efficient use of production
-                    project budgets ranging from $2,000 - $25,000
-                  </li>
-                </ul>
-              </div>
-              <div class="resume-item ps-4 position-relative">
-                <h4 class="mb-2 playfair fs-5">Graphic design specialist</h4>
-                <h5 class="py-1 px-2 mb-2 dark-text poppins">2017 - 2018</h5>
-                <p class="mb-3 dark-text"><em>Stepping Stone Advertising, New York, NY</em></p>
-                <ul class="ps-3 mb-3">
-                  <li class="pb-2 dark-text">
-                    Developed numerous marketing programs (logos, brochures,infographics, presentations, and
-                    advertisements).
-                  </li>
-                  <li class="pb-2 dark-text">
-                    Managed up to 5 projects or tasks at a given time while under pressure
-                  </li>
-                  <li class="pb-2 dark-text">
-                    Recommended and consulted with clients on the most appropriate graphic design
-                  </li>
-                  <li class="pb-2 dark-text">
-                    Created 4+ design presentations and proposals a month for clients and account managers
-                  </li>
-                </ul>
-<span class="corner-bottom-left"></span>
-    <span class="corner-bottom-left-vert"></span>
-  </div>
-            </div>
-          </div>
+  <!-- Resume Section -->
+<section id="resume" class="resume section-black">
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Resume</h2>
+    <p>Experience and technical expertise at a glance.</p>
+  </div><!-- End Section Title -->
+
+  <!-- Neon Framed Resume Body -->
+  <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
+    <div class="row">
+      <div class="col-lg-6">
+        <h3 class="my-3">Summary</h3>
+        <div class="resume-item ps-4 position-relative">
+          <h4 class="mb-2">Alice Barkley</h4>
+          <p class="mb-3">
+            <em>
+              Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing
+              user-centered digital/print marketing material from initial concept to final, polished deliverable.
+            </em>
+          </p>
+          <ul class="ps-3 mb-3">
+            <li>Portland par 127,Orlando, FL</li>
+            <li>+(123) 456-7891</li>
+            <li>alice.barkley@example.com</li>
+          </ul>
         </div>
-      </section>
-<!-- /Resume Section [Lonely Bootstrap] -->
+
+        <h3 class="my-3">Education</h3>
+        <div class="resume-item ps-4 pb-4 position-relative">
+          <h4 class="mb-2">Master of Fine Arts & Graphic Design</h4>
+          <h5 class="py-1 px-2 mb-2">2015 - 2016</h5>
+          <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+          <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit...</p>
+        </div>
+
+        <div class="resume-item ps-4 position-relative">
+          <h4 class="mb-2">Bachelor of Fine Arts & Graphic Design</h4>
+          <h5 class="py-1 px-2 mb-2">2010 - 2014</h5>
+          <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+          <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis...</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <h3 class="my-3">Professional Experience</h3>
+        <div class="resume-item ps-4 pb-4 position-relative">
+          <h4 class="mb-2">Senior graphic design specialist</h4>
+          <h5 class="py-1 px-2 mb-2">2019 - Present</h5>
+          <p><em>Experion, New York, NY</em></p>
+          <ul class="ps-3 mb-3">
+            <li>Lead in the design, development, and implementation of materials</li>
+            <li>Delegate tasks to the 7 members of the design team</li>
+            <li>Supervise the assessment of all graphic materials</li>
+            <li>Oversee budgets ranging from $2,000 - $25,000</li>
+          </ul>
+        </div>
+
+        <div class="resume-item ps-4 position-relative">
+          <h4 class="mb-2">Graphic design specialist</h4>
+          <h5 class="py-1 px-2 mb-2">2017 - 2018</h5>
+          <p><em>Stepping Stone Advertising, New York, NY</em></p>
+          <ul class="ps-3 mb-3">
+            <li>Developed numerous marketing programs (logos, brochures, infographics...)</li>
+            <li>Managed up to 5 projects or tasks under pressure</li>
+            <li>Recommended and consulted with clients</li>
+            <li>Created 4+ design presentations and proposals per month</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Neon bottom-left accents -->
+    <span class="corner-bottom-left"></span>
+    <span class="corner-bottom-left-vert"></span>
+  </div><!-- End neon-paragraph -->
+</section>
+<!-- /Resume Section -->
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section-black">
