--- a/index.html
+++ b/index.html
@@ -352,35 +352,33 @@
 
     </section><!-- /Portfolio Section -->
 
-<!-- Blog Section - Accordion Style -->
-<section id="blog-accordion" class="blog section-black">
-
+<!-- Blog Section - Neon Accordion -->
+<section id="blog-accordion" class="section-black py-5">
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Writing</h2>
-    <p>Latest posts, summaries and quick links — expand to read more.</p>
-  </div><!-- End Section Title -->
+    <p>Recent published work on Medium — expand to preview each article.</p>
+  </div>
 
-  <div class="container">
+  <!-- Neon Framed Blog Container -->
+  <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
 
-    <div class="accordion" id="accordionBlog" data-aos="fade-up" data-aos-delay="100">
+    <div class="accordion" id="accordionBlog">
 
       <!-- Article 1 -->
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="false" aria-controls="collapseOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             David Bowie’s Ode to Sci-Fi and Space Science
           </button>
         </h2>
-        <div id="collapseOne" class="accordion-collapse collapse"
-             aria-labelledby="headingOne" data-bs-parent="#accordionBlog">
+        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+             data-bs-parent="#accordionBlog">
           <div class="accordion-body">
-            <p>A reflection on how David Bowie’s music bridged art, science fiction,
-               and real space exploration — inspiring a generation of scientists.</p>
-            <a href="https://medium.com/@sashacheek100/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
-               target="_blank" class="cp-btn">Read on Medium →</a>
+            <p>How David Bowie’s fascination with space shaped his music and influenced space culture itself.</p>
+            <a href="https://medium.com/@sashacheek100/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546" 
+               target="_blank" class="btn btn-sm btn-primary">Read Full Article</a>
           </div>
         </div>
       </div>
@@ -388,19 +386,17 @@
       <!-- Article 2 -->
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
-          <button class="accordion-button collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-                  aria-expanded="false" aria-controls="collapseTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
             Automated Love: How AI Became the New Face of Romance
           </button>
         </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse"
-             aria-labelledby="headingTwo" data-bs-parent="#accordionBlog">
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+             data-bs-parent="#accordionBlog">
           <div class="accordion-body">
-            <p>Exploring how artificial intelligence has reshaped intimacy and
-               relationships in the digital era.</p>
-            <a href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
-               target="_blank" class="cp-btn">Read on Medium →</a>
+            <p>An exploration of AI companions, chatbots, and the rise of technology-mediated romance.</p>
+            <a href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079" 
+               target="_blank" class="btn btn-sm btn-primary">Read Full Article</a>
           </div>
         </div>
       </div>
@@ -408,26 +404,27 @@
       <!-- Article 3 -->
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingThree">
-          <button class="accordion-button collapsed" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#collapseThree"
-                  aria-expanded="false" aria-controls="collapseThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             Dealing with Early Signs of Alzheimer’s Disease in Loved Ones
           </button>
         </h2>
-        <div id="collapseThree" class="accordion-collapse collapse"
-             aria-labelledby="headingThree" data-bs-parent="#accordionBlog">
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+             data-bs-parent="#accordionBlog">
           <div class="accordion-body">
-            <p>Personal and practical insights into supporting loved ones showing
-               early symptoms of Alzheimer’s disease.</p>
-            <a href="https://medium.com/@sashacheek100/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
-               target="_blank" class="cp-btn">Read on Medium →</a>
+            <p>Practical strategies and emotional insights when family members begin showing signs of Alzheimer’s.</p>
+            <a href="https://medium.com/@sashacheek100/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7" 
+               target="_blank" class="btn btn-sm btn-primary">Read Full Article</a>
           </div>
         </div>
       </div>
 
     </div><!-- /.accordion -->
-  </div><!-- /.container -->
 
+    <!-- Neon bottom-left accents -->
+    <span class="corner-bottom-left"></span>
+    <span class="corner-bottom-left-vert"></span>
+  </div><!-- /.neon-paragraph -->
 </section>
 <!-- End Blog Section -->
 
