--- a/index.html
+++ b/index.html
@@ -504,45 +504,53 @@
   </div><!-- End container -->
 </section><!-- /Testimonials Section -->
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section-black">
+ <!-- Contact Section -->
+<section id="contact" class="contact section-black">
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Contact</h2>
+    <p>Have a question, need help with a project, or just talk about tech? I'm always happy to connect. Send me a message, and I will respond within 24-48 hours.</p>
+  </div><!-- End Section Title -->
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Have a question, need help with a project, or just talk about tech? I'm always happy to connect. Send me a message, and I will respond within 24-48 hours.</p>
-      </div><!-- End Section Title -->
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <!-- Neon Framed Contact Container -->
+  <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
 
-        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="300">
-          <div class="row gy-4">
+    <form action="forms/contact.php" method="post" class="php-email-form">
+      <div class="row gy-4">
 
-            <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-            </div>
+        <div class="col-md-6">
+          <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+        </div>
 
-            <div class="col-md-6 ">
-              <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-            </div>
+        <div class="col-md-6">
+          <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+        </div>
 
-            <div class="col-md-12">
-              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-            </div>
+        <div class="col-md-12">
+          <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+        </div>
 
-            <div class="col-md-12">
-              <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-            </div>
+        <div class="col-md-12">
+          <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+        </div>
 
-            <div class="col-md-12 text-center">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
+        <div class="col-md-12 text-center">
+          <div class="loading">Loading</div>
+          <div class="error-message"></div>
+          <div class="sent-message">Your message has been sent. Thank you!</div>
 
-              <button type="submit">Send Message</button>
-            </div>
+          <button type="submit">Send Message</button>
+        </div>
 
-          </div>
-        </form><!-- End Contact Form -->
+      </div>
+    </form>
+
+    <!-- Neon bottom-left accents -->
+    <span class="corner-bottom-left"></span>
+    <span class="corner-bottom-left-vert"></span>
+  </div><!-- End neon-paragraph -->
+</section>
+<!-- End Contact Section -->
 
       </div>
 
