--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <img src="https://media.licdn.com/dms/image/v2/D5603AQEibYrTk8suiA/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1687087039525?e=1761782400&v=beta&t=MG7kjd4nd9Lk5s_lKX1opAb8gAUUS6P1s6HmVxCU7ao" class="testimonial-img" alt="">
+                <h3>Daniel M. Chin, PMP</h3>
+                <h4>Program Manager at Microsoft</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -469,8 +469,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                    Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>I worked with Sasha on the Microsoft e-commerce program migration project. She successfully managed complicated program tasks with a detail oriented project management skill-set while employing creativity. Thanks to her clear communication with cross functional teams, we could efficiently use our time. She is a very knowledgeable and hardworking collaborator. She’s also a very friendly and warm hearted person. I strongly recommend her for any program manager position.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -478,9 +477,9 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <img src="https://media.licdn.com/dms/image/v2/D5603AQEoS37JgAcEKw/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1731534579150?e=1761782400&v=beta&t=XOFElMatfSz274LVnHA3fx1YvVkVCEBuJm8IldSTupo" class="testimonial-img" alt="">
+                <h3>Susan Walker</h3>
+                <h4>Scrum Master at Abercrombie &amp; Fitch</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -488,8 +487,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-                    quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span>I had the pleasure of working with Sasha as a fellow Technical Program Manager. From the moment I met her during my first day at Credit Karma I liked her and knew she would be someone I could learn from. She is knowledgeable and passionate about coaching teams to be their very best. She has a positive attitude and is always willing to help whenever needed. She is also not afraid to ask the hard questions and point out areas where we can all improve. She is a humble leader who always has the best in mind of everyone she works with.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
