--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           tech, integrations, and freelance science writing services.</p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+      <div class="container justify-content-center">
 
         <!-- Service 1 -->
         <div class="row">
