--- a/index.html
+++ b/index.html
@@ -604,6 +604,8 @@
   </main>
 
   <footer id="footer" class="footer">
+    style="background:url('assets/img/cyberpunk-footer.jpg') no-repeat center center;
+               background-size:cover;">
     <div class="container">
       <h3 class="sitename">Sasha Cheek | Portfolio</h3>
       <p>Bridging the gap between systems and narrative.</p>
