--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
   </main>
 
-  <footer id="footer" class="footer">
+  <footer id="footer" class="footer"
     style="background:url('assets/img/cyberpunk-footer.jpg') no-repeat center center;
                background-size:cover;">
     <div class="container">
