--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
   </main>
 
   <footer id="footer" class="footer"
-    style="background:url('assets/img/cyberpunk-footer.jpg') no-repeat center center;
+    style="background:url('assets/img/cyberpunk-footer.jpg') no-repeat center center / cover !important;
                background-size:cover;">
     <div class="container">
       <h3 class="sitename">Sasha Cheek | Portfolio</h3>
