--- a/index.html
+++ b/index.html
@@ -118,16 +118,18 @@
             <div class="col-lg-7 content">
               <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to
                 demystify engineering and science through storytelling.</h3>
-              <div class="neon-paragraph">
+              <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
                 <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and
                   program management roles at Microsoft and Indeed. In addition to working full-time in technology,
                   Sasha is an M.A. candidate in Science Writing at Johns Hopkins University.</p>
                 <p>When Sasha is not debugging code and creating articles, she's dissecting the science behind her
                   favorite films and TV shows.</p>
-                <span class="corner-bottom-left"></span>
-                <span class="corner-bottom-left-vert"></span>
-              </div>
-            </div>
+
+<!-- Neon bottom-left accents -->
+<span class="corner-bottom-left"></span>
+<span class="corner-bottom-left-vert"></span>
+
+</div><!-- /.neon-paragraph -->
           </div>
     </section><!-- /About Section -->
 
