--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
 </div><!-- /.neon-paragraph -->
           </div>
+         </div>
     </section><!-- /About Section -->
 
     <!-- Services Section -->
