--- a/index.html
+++ b/index.html
@@ -311,11 +311,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/product-1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Coding Project 1</h4>
                   <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/product-1.jpg" title="Coding Project 1"
+                  <a href="assets/img/portfolio/product-1.png" title="Coding Project 1"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
@@ -341,11 +341,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/product-2.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Coding Project 2</h4>
                   <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/product-2.jpg" title="Coding Project 2"
+                  <a href="assets/img/portfolio/product-2.png" title="Coding Project 2"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
@@ -371,11 +371,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/product-3.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Coding Project 3</h4>
                   <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/product-3.jpg" title="Coding Project 3"
+                  <a href="assets/img/portfolio/product-3.png" title="Coding Project 3"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
