--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/product-1.jpg" alt="">
+                  <img src="assets/img/portfolio/product-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
