--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-apis">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/api-1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>API Project 1</h4>
                   <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="API Project 1"
+                  <a href="assets/img/portfolio/api-1.png" title="API Project 1"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
@@ -326,11 +326,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-apis">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/api-2.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>API Project 2</h4>
                   <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/app-2.jpg" title="API Project 2"
+                  <a href="assets/img/portfolio/api-2.png" title="API Project 2"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
@@ -356,11 +356,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-apis">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/api-3.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>API Project 3</h4>
                   <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/app-3.jpg" title="API Project 3"
+                  <a href="assets/img/portfolio/api-3.png" title="API Project 3"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
