--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -123,7 +123,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-1.jpg" alt="">
+                  <img src="assets/img/portfolio/api-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
