--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
                   user-centered digital/print marketing material from initial concept to final, polished deliverable.
                 </em>
               </p>
-              <p class="description"><span class="bullet">Portland par 127, Orlando, FL</span></p>
-              <p class="description"><span class="bullet">+(123) 456-7891</span></p>
-              <p class="description"><span class="bullet">alice.barkley@example.com</span></p>
+              <p class="description"><span class="bullet">&bull; Portland par 127, Orlando, FL</span></p>
+              <p class="description"><span class="bullet">&bull; +(123) 456-7891</span></p>
+              <p class="description"><span class="bullet">&bull; alice.barkley@example.com</span></p>
             </div>
       
             <h3 class="my-3">Education</h3>
